syntax = "proto3";

package com.feige.grpc;

import "google/protobuf/any.proto";

option java_multiple_files = true;

message Message {
  int32 version = 1;
  int32 cmd = 2;
  int32 seq_id = 3;
  int32 feats = 4;
  int32 cs = 5;
  int32 serializer = 6;
  int32 real_type = 7;
  bytes data = 8;
  map<string, google.protobuf.Any> extra = 9;
}

service MessageService {
  rpc SendMessage(Message) returns (Message);
}
